--- a/configs/audiffuse_default.yaml
+++ b/configs/audiffuse_default.yaml
@@ -21,23 +21,22 @@ trainer:
         save_last: true
   # gradient_clip_val: 1.0
   fast_dev_run: false
-  max_epochs: 500
+  max_epochs: 1000
 model:
-  first_stage_ckpt: "/scratch/korte/audiffuse/autoencoder_ckpt"
+  unet_ckpt: "/scratch/korte/audiffuse/sd_unet_ckpt"
+  first_stage_ckpt: '/scratch/korte/audiffuse/sd14_ae_ckpt' #"/scratch/korte/audiffuse/autoencoder_ckpt"
   cond_stage_ckpt: '/scratch/korte/audiffuse/clap.ckpt'
-  freeze_cond_stage: false
+  freeze_cond_stage: true
   loss_func: mse
   noise_scheduler_timesteps: 1000
   use_lr_scheduler: false
   val_gen_freq: 1
-  scale_by_std: false
-  scale_factor: 0.1857
 data:
   data_dir: '/fastscratch/korte/es-dataset'
   batch_size: 32
-  num_workers_train: 32
+  num_workers_train: 20
   num_workers_val: 4
-  num_workers_val_gen: 4
+  num_workers_val_gen: 2
   clip_samples: 0
   val_gen_images: 16
-ckpt_path: null #/scratch/korte/audiffuse/lightning_logs/version_0/checkpoints/diffuser-epoch=062-val/loss=0.19.ckpt/
+ckpt_path: /scratch/korte/audiffuse/lightning_logs/version_13/checkpoints/last.ckpt/
